--- a/HelpDesk/Views/Helpdesk/ListaFirma.cshtml
+++ b/HelpDesk/Views/Helpdesk/ListaFirma.cshtml
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     @Html.Partial("_Header")
 
     <div class="container mt-4">
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-
+        
         <!-- Table Container -->
         <div class="table-responsive mb-4">
             @if (Model.Count == 0)
@@ -107,7 +107,7 @@
             }
         </div>
     </div>
-
+    @Html.Partial("_Footer")
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
