--- a/HelpDesk/Views/Helpdesk/ListaFirmaPunctLucru.cshtml
+++ b/HelpDesk/Views/Helpdesk/ListaFirmaPunctLucru.cshtml
@@ -24,10 +24,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     @Html.Partial("_Header")
+    <div class="container-fluid mt-4">
 
-    <div class="container mt-4">
+        @if (TempData["SuccessMessage"] != null)
+        {
+            <div class="alert alert-success alert-lg alert-dismissible fade show" role="alert" style="font-size: 0.875rem;">
+                @TempData["SuccessMessage"]
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+
+        @if (TempData["ErrorMessage"] != null)
+        {
+            <div class="alert alert-danger alert-lg alert-dismissible fade show" role="alert" style="font-size: 0.875rem;">
+                @TempData["ErrorMessage"]
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+
         <!-- Filter Button and Dropdown Menu -->
         <div class="d-flex justify-content-between mb-3">
             <button class="btn btn-secondary" id="lista-firma-filter-button">
@@ -102,63 +118,77 @@
 
         <!-- Table -->
         <div class="table-responsive mb-4">
-            <table class="table table-bordered table-striped" id="lista-firma-table">
+            <table class="table table-bordered table-striped table-sm" id="lista-firma-table">
                 <thead class="table-dark text-white">
                     <tr>
-                        <th>Firma</th>
-                        <th>Punct de Lucru</th>
-                        <th class="text-center">eFactura</th>
-                        <th class="text-center">OPT</th>
-                        <th class="text-center">CMS</th>
-                        <th class="text-center">Loyalty</th>
+                        <th class="text-nowrap px-2">Firma</th>
+                        <th class="text-nowrap px-2">Punct de Lucru</th>
+                        <th class="text-center text-nowrap px-2">eFactura</th>
+                        <th class="text-center text-nowrap px-2">OPT</th>
+                        <th class="text-center text-nowrap px-2">CMS</th>
+                        <th class="text-center text-nowrap px-2">Loyalty</th>
+                        <th class="text-center text-nowrap px-2">Inserat la</th>
+                        <th class="text-center text-nowrap px-2">Inserat de</th>
+                        <th class="text-center text-nowrap px-2">Modificat la</th>
+                        <th class="text-center text-nowrap px-2">Modificat de</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td>@item.Firma</td>
-                            <td>@item.PctLucru</td>
+                            <td class="text-nowrap px-2">@item.Firma</td>
+                            <td class="text-nowrap px-2">@item.PctLucru</td>
 
-                            <!-- Display "Da" with green badge if true, otherwise display "Nu" or blank -->
-                            <td class="text-center">
+                            <td class="text-center px-2">
                                 @if (item.Has_eFactura == true)
                                 {
                                     <span class="badge bg-success">Da</span>
                                 }
-                                else if (item.Has_eFactura == false)
+                                else
                                 {
                                     <span>Nu</span>
                                 }
-                                else
-                                {
-                                    <span></span>
-                                }
                             </td>
 
-                            <td class="text-center">
+                            <td class="text-center px-2">
                                 @if (item.Has_OPT == true)
                                 {
                                     <span class="badge bg-success">Da</span>
                                 }
-                                else if (item.Has_OPT == false)
+                                else
                                 {
                                     <span>Nu</span>
                                 }
-                                else
-                                {
-                                    <span></span>
-                                }
                             </td>
 
-                            <td class="text-center">
+                            <td class="text-center px-2">
                                 @if (item.Has_CMS == true)
                                 {
                                     <span class="badge bg-success">Da</span>
                                 }
-                                else if (item.Has_CMS == false)
+                                else
                                 {
                                     <span>Nu</span>
+                                }
+                            </td>
+
+                            <td class="text-center px-2">
+                                @if (item.Has_Loyalty == true)
+                                {
+                                    <span class="badge bg-success">Da</span>
+                                }
+                                else
+                                {
+                                    <span>Nu</span>
+                                }
+                            </td>
+
+                            <td class="text-center text-nowrap px-2">
+                                @if (item.InsTime != null)
+                                {
+                                    @item.InsTime.ToString("yyyy-MM-dd HH:mm:ss")
                                 }
                                 else
                                 {
@@ -166,19 +196,43 @@
                                 }
                             </td>
 
-                            <td class="text-center">
-                                @if (item.Has_Loyalty == true)
+                            <td class="text-center text-nowrap px-2">
+                                @if (item.InsUser != null)
                                 {
-                                    <span class="badge bg-success">Da</span>
-                                }
-                                else if (item.Has_Loyalty == false)
-                                {
-                                    <span>Nu</span>
+                                    @item.InsUser
                                 }
                                 else
                                 {
                                     <span></span>
                                 }
+                            </td>
+
+                            <td class="text-center text-nowrap px-2">
+                                @if (item.ModTime != null)
+                                {
+                                    @item.ModTime.ToString("yyyy-MM-dd HH:mm:ss")
+                                }
+                                else
+                                {
+                                    <span></span>
+                                }
+                            </td>
+
+                            <td class="text-center text-nowrap px-2">
+                                @if (item.ModUser != null)
+                                {
+                                    @item.ModUser
+                                }
+                                else
+                                {
+                                    <span></span>
+                                }
+                            </td>
+
+                            <td class="text-center px-3">
+                                <a href="@Url.Action("ModifyFirmaPunctLucru", "Helpdesk", new { id = item.Id })" class="btn btn-secondary btn-sm">
+                                    Modificare
+                                </a>
                             </td>
                         </tr>
                     }
@@ -256,7 +310,7 @@
             </nav>
         </div>
     </div>
-
+    @Html.Partial("_Footer")
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
