--- a/HelpDesk/Views/Helpdesk/Dashboard.cshtml
+++ b/HelpDesk/Views/Helpdesk/Dashboard.cshtml
@@ -168,8 +168,8 @@
 
         <!-- New Table for Calls and Duration Outside Schedule -->
         <div class="row">
-            <div class="col-12 mb-4">
-                <h2 class="text-center mb-4">Top 10 Firme (In afara programului)</h2>
+            <div class="col-md-6 mb-4">
+                <h2 class="text-center mb-4">Top 10 Firme in afara programului</h2>
                 <table class="table table-striped table-bordered">
                     <thead class="table-dark text-white">
                         <tr>
@@ -190,7 +190,31 @@
                     </tbody>
                 </table>
             </div>
+
+            <div class="col-md-6 mb-4">
+                <h2 class="text-center mb-4">Top 10 firme în afara programului (Luna Curentă)</h2>
+                <table class="table table-striped table-bordered">
+                    <thead class="table-dark text-white">
+                        <tr>
+                            <th>Firma</th>
+                            <th>Număr Total Apeluri</th>
+                            <th>Durată Totală Apeluri (Minute)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in ViewBag.CurrentMonthOutsideHoursFirms)
+                        {
+                            <tr>
+                                <td>@item.Firma</td>
+                                <td>@item.TotalCallsOutsideHours</td>
+                                <td>@item.TotalDurationOutsideHours</td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
+
     </div>
 
     @Html.Partial("_Footer")
@@ -223,8 +247,8 @@
                         spanGaps: true
                     },
                     {
-                        label: 'Apeluri în afara orelor 20:00 - 07:00',
-                        data: callsOutsideHoursData.data,  // Use the new dataset here
+                        label: 'Apeluri în intervalul 20:00 - 07:00',
+                        data: callsOutsideHoursData.data,  
                         borderColor: 'rgba(54, 162, 235, 1)',
                         backgroundColor: 'rgba(54, 162, 235, 0.2)',
                         borderWidth: 1,
